# zeldhash-parser

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  rust-toolchain.toml
.githook/: pre-commit
.github/workflows/: clippy.yml  coverage.yml  fmt.yml  publish.yml  tests.yml
src/: cli.rs  config.rs  main.rs  parser.rs  progress.rs  stores.rs
src/cli/: args.rs  duration.rs  protoblock.rs  rollblock.rs
src/config/: app.rs  protoblock.rs  rollblock.rs
src/stores/: queries.rs  sqlite.rs  utxo.rs
