[package]
name = "mhinparser"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
description = "High-performance Bitcoin blockchain parser implementing the My Hash Is Nice protocol"
readme = "README.md"
repository = "https://github.com/ouziel-slama/mhinparser"
keywords = ["bitcoin", "blockchain", "parser", "mhin"]
categories = ["cryptography::cryptocurrencies"]

[dependencies]
anyhow = "1.0.94"
bitcoin = "0.32.7"
clap = { version = "4.5.53", features = ["derive", "env"] }
directories = "5.0.1"
humantime = "2.1.0"
humantime-serde = "1.1.1"
libc = "0.2.169"
protoblock = "0.1.6"
rollblock = "0.3.2"
mhinprotocol = "0.2.3"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
rusqlite = { version = "0.32.1", features = ["bundled"] }
toml = "0.8.19"
rand = "0.9.0"
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
tracing-appender = "0.2.0"
ratatui = "0.28.1"

[dev-dependencies]
tempfile = "3.13.0"
