[package]
name = "zeldhash-parser"
version = "0.2.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
description = "High-performance Bitcoin blockchain parser implementing the ZeldHash protocol"
readme = "README.md"
homepage = "https://github.com/ouziel-slama/zeldhash-parser"
documentation = "https://docs.rs/zeldhash-parser"
repository = "https://github.com/ouziel-slama/zeldhash-parser"
keywords = ["bitcoin", "blockchain", "parser", "zeld", "zeldhash"]
categories = ["cryptography::cryptocurrencies"]

[dependencies]
anyhow = "1.0.100"
bitcoin = "0.32.7"
clap = { version = "4.5.53", features = ["derive", "env"] }
directories = "6.0.0"
humantime = "2.3.0"
humantime-serde = "1.1.1"
libc = "0.2.178"
protoblock = "0.1.6"
rollblock = { version = "0.4.0", features = ["key-12"] }
zeldhash-protocol = "0.3.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
rusqlite = { version = "0.37.0", features = ["bundled"] }
toml = "0.9.8"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
tracing-appender = "0.2.4"
ratatui = "0.29.0"

[dev-dependencies]
tempfile = "3.23.0"
